--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="mainSass.css" />
+    <link rel="stylesheet" href="mainScss.css" />
     <link rel="shortcut icon" href="material/favicons.png" />
   </head>
   <body class="preload">
