--- a/gallery.html
+++ b/gallery.html
@@ -15,6 +15,7 @@
     <script defer src="js.js"></script>
   </head>
   <body>
+    <header class="header__gallery">
     <nav class="navbar__container" id="navbar-container">
       <ul class="nav__list">
         <li class="nav__items">
@@ -67,6 +68,7 @@
         <i class="ri-dashboard-fill"></i>
       </div>
     </nav>
+  </header>
     <h1>Gallery</h1>
 
     
