--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             /></a>
           </li>
           <li class="nav__items ">
-            <a href="/index.html" class="home nav__link nav__link--active"
+            <a href="#home" class="home nav__link nav__link--active"
               >Home</a
             >
           </li>
@@ -79,7 +79,7 @@
             <a href="/events.html" class="nav__link">Events</a>
           </li>
           <li class="nav__items">
-            <a href="#sub" class="sub nav__link">Subscribe</a>
+            <a href="/subscribe.html" class="sub nav__link">Subscribe</a>
           </li>
           <i class="ri-close-fill nav--close"></i>
 
@@ -823,7 +823,7 @@
           </div>
           <div class="subscribe__right">
             <h2 class="subscribe__header">Do you <span class="subscribe__highlight"> want to know</span> more about upcoming <br>Features, Events, Promotions?</h2>
-            <a class="subscribe__btn" href="#">Subscribe</a>
+            <a class="subscribe__btn" href="/subscribe.html">Subscribe</a>
             
           </div>
       </div>
@@ -835,7 +835,7 @@
 
     <section class="section footer">
       <div class="section__img">
-        <a class="footer__logo--home" href="/index.html" ><img src="material/resize/logolong350.png" alt="" /></a>
+        <a class="footer__logo--home" href="#home" ><img src="material/resize/logolong350.png" alt="" /></a>
       </div>
       <div class="footer-wrap">
         <div class="footer__info">
@@ -877,7 +877,7 @@
               <a href="/delivery.html" class="footer__link">Delivery</a>
             </li>
             <li class="footer__items">
-              <a href="#sub" class="footer__link">Subscribe</a>
+              <a href="/subscribe.html" class="footer__link">Subscribe</a>
             </li>
           </ul>
         </div>
@@ -913,6 +913,6 @@
       </div>
     </div>
     <div class="promotion__overlay hidden"></div> 
-    
+   
   </body>
 </html>
