--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
    
   </head>
   <body>
-    <main id="swup">
+   
     <header>
       <div class="nav__over">
         <nav class="navbar__container--sub" id="navbar-container">
@@ -87,10 +87,9 @@
           <i class="ri-dashboard-fill"></i>
         </div>
   </header>
-  
 <div class="section event">
-  <div class="event__header transition-fadeIn">September Movies</div>
-   <div class="event__container transition-slideDown">
+  <div class="event__header">September Movies</div>
+   <div class="event__container">
      <div class="film">
         <div class="event__date">
           <h1>5</h1>
@@ -132,7 +131,7 @@
       </div>
    </div>
 </div> 
-
+</main> 
     <section class="section footer">
       <div class="section__img">
         <a class="footer__logo--home" href="/index.html" ><img src="material/resize/logolong350.png" alt="" /></a>
@@ -196,8 +195,6 @@
       </div>
     </section>
 
-  </main>
-  <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
-  <script defer  src="script/app.js"></script>
+
   </body>
 </html>
