--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <!-- NAVBAR MENU -->
       
-      <nav class="navbar__container" id="navbar-container">
+      <nav class="navbar__container transition-fadeIn" id="navbar-container">
         <ul class="nav__list">
           <li class="nav__items logohome">
               <img src="material/resize/logolong300.png" alt=""
@@ -94,6 +94,7 @@
         </div>
      
       </nav>
+   
     </header>
   
     <!-- RESERVATION -->
@@ -904,7 +905,5 @@
       </div>
     </div>
     <div class="promotion__overlay hidden"></div> 
-
-
   </body>
 </html>
