--- a/subscribe.html
+++ b/subscribe.html
@@ -12,13 +12,12 @@
     <link rel="stylesheet" href="mainStyle.css" />
     <link rel="stylesheet" href="style/eventSubStyle.css" />
     <link rel="stylesheet" href="style/navbar.css" />
-    <link rel="stylesheet" href="style/animationSwup.css" />
     <link rel="shortcut icon" href="material/favicons.png" />
+
     <script defer src="script/scriptSecondary.js"></script>
    
   </head>
   <body>
-    <main id="swup">
     <header>
         <nav class="navbar__container--sub" id="navbar-container">
 
@@ -84,9 +83,9 @@
       <section class="section subscribe">
         <div class="subscribe__container">
           <div class="subscribe__left">
-            <img class="transition-slideDown"  src="material/resize/sublogo.png" alt="">
+            <img  src="material/resize/sublogo.png" alt="">
           </div>
-          <div class="subscribe__right transition-fadeIn">
+          <div class="subscribe__right">
             <h1 class=" sub__header">JOIN THE MAILING LIST</h1>
             <p class="sub__content">Be the first to receive exclusive promotions & discounts. </p>
             <p class="sub__content">As well as the inside scoop on new beer releases!</p>
@@ -172,9 +171,6 @@
         </div>
       </div>
     </section>
-  </main>
-    <script defer src="https://unpkg.com/swup@latest/dist/swup.min.js"></script>  
-    <script  defer src="script/app.js"></script>
   
   </body>
 </html>
