--- a/delivery.html
+++ b/delivery.html
@@ -474,7 +474,7 @@
       <div class="modal__right">
         <h2 class="modal__name">Puddiecome Apple Cranberry Cider
         </h2>
-        <p class="modal__description">Made from a fresh blend of our main stream, twelve variety apple cider and a blush addition of fresh pressed cranberry juice, straight from the bogs of Muskoka. The cranberry is prominent in the bouquet and pallet, with a light crisp finish.</p>
+        <p class="modal__description">Made from a fresh blend of our main stream, twelve variety apple cider and a blush addition of fresh pressed cranberry juice, straight from the bogs of Muskoka.</p>
         <p class="modal__price">$ 6.35 CAD</p>
           <label class="modal__quantity" for="quantity">Quantity: </label>
           <input class="modal__input" type="number" max="200" value="1">
