--- a/events.html
+++ b/events.html
@@ -91,6 +91,7 @@
   <div class="event__header">September Movies</div>
    <div class="event__container">
      <div class="film">
+       <img src="../material/resize/300.jpg" alt="">
         <div class="event__date">
           <h1>5</h1>
           <p>September</p>
@@ -101,6 +102,7 @@
       </div>
 
      <div class="film">
+       <img src="../material/resize/deadpool.jpg" alt="">
         <div class="event__date">
           <h1>12</h1>
           <p>September</p>
@@ -111,6 +113,7 @@
      </div>
 
      <div class="film">
+      <img src="../material/resize/joker.jpg" alt="">
         <div class="event__date">
           <h1>19</h1>
           <p>September</p>
@@ -121,6 +124,7 @@
       </div>
 
       <div class="film">
+        <img src="../material/resize/it.jpg" alt="">
         <div class="event__date">
           <h1>26</h1>
           <p>September</p>
@@ -131,7 +135,7 @@
       </div>
    </div>
 </div> 
-</main> 
+ 
     <section class="section footer">
       <div class="section__img">
         <a class="footer__logo--home" href="/index.html" ><img src="material/resize/logolong350.png" alt="" /></a>
