--- a/gallery.html
+++ b/gallery.html
@@ -161,39 +161,37 @@
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1545851085403-JV146TWSO3AAP9WA4QFH/47395462_222772745282722_1965138088439054336_n.jpg?format=500w" alt="">
     </div>
     <div class="gallery__img img24">
-      <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1545851721027-Z9IH3STB9VFQEN62UQ06/47395462_222772745282722_1965138088439054336_n.jpg?format=500w" alt="">
-    </div>
-    <div class="gallery__img img25">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1545851756186-Z4DQHO96KWOUIJVNT66C/47578325_369323780506176_1010760784348708864_n.jpg?format=500w" alt="">
     </div>
-    <div class="gallery__img img26">
+    <div class="gallery__img img25">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1607362946473-7K6NOBGAMILM482ZV1LE/Big+Breakfast.jpg?format=500w" alt="">
     </div>
-    <div class="gallery__img img27">
+    <div class="gallery__img img26">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1607363355314-B9EZ3EYF6RJQ6J96HDI2/fish+and+chips.jpg?format=500w" alt="">
     </div> 
-    <div class="gallery__img img28">
+    <div class="gallery__img img27">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621359682977-28FC8AHED9WIUM5E8AU1/beer+line+up.jpg?format=500w" alt="">
     </div>
-    <div class="gallery__img img29">
+    <div class="gallery__img img28">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621360355810-6RMUHEWTFCXERGFVNGCC/covid+patio+back.jpg?format=500w" alt="">
+    </div>
+    <div class="gallery__img img29">
+      <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621360545483-DTZ8Q8JNQ8D484J4FUE0/pods+patio.jpg?format=2500w" alt="">
     </div>
     <div class="gallery__img img30">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621360403166-VVHIY9IQX6VTGVM60UYZ/nba+patio.jpg?format=500w" alt="">
     </div>
+    
     <div class="gallery__img img31">
-      <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621360545483-DTZ8Q8JNQ8D484J4FUE0/pods+patio.jpg?format=2500w" alt="">
-    </div>
-    <div class="gallery__img img32">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621361506488-4SUQZSLFUHWJY0Q64GQN/brewery+2.jpg?format=500w" alt="">
     </div>
-    <div class="gallery__img img33">
+    <div class="gallery__img img32">
       <img src="https://images.squarespace-cdn.com/content/v1/53ce954de4b0945af8803fe9/1621362386939-Q20DRDIFOKUMRJNQY0VR/brewery.jpg?format=500w" alt="">
     </div> 
   </div>
 
-  
-  <div class="preview-box">
+  <div class="overlayBox">
+    <div class="preview-box">
     <div class="details">
       <span class="title">
         Image <p class="current-img"></p>
@@ -210,6 +208,7 @@
       <img src="" alt="">
     </div>
     <i class="ri-close-line box__close"></i>
+  </div>
   </div>
 </div>
 
