--- a/gallery.html
+++ b/gallery.html
@@ -70,7 +70,7 @@
                 </li>
                 <i class="ri-close-fill nav--close"></i>
                 <div class="nav__socials--sub">
-                  <a href="https://www.facebook.com/" target="__blank"
+                  <a href="https://www.facebook.com/LouisCiferBrewWorks" target="__blank"
                       ><i class="icon ri-facebook-circle-fill"></i
                   ></a>
                   <a href="https://www.instagram.com/louisciferbw" target="__blank"
@@ -268,7 +268,7 @@
     <div class="footer__socials">
       <h3 class="footer__contact--black">Social Links</h3>
       <div class="footer__social--icons">
-        <a href="https://www.facebook.com/" target="__blank"
+        <a href="https://www.facebook.com/LouisCiferBrewWorks" target="__blank"
         ><i class="ri-facebook-circle-fill"></i
           ></a>
           <a href="https://www.instagram.com/louisciferbw" target="__blank"
