--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <i class="ri-close-fill nav--close"></i>
 
           <div class="nav__socials">
-            <a href="https://www.facebook.com/" target="__blank"
+            <a href="https://www.facebook.com/LouisCiferBrewWorks" target="__blank"
               ><i class="ri-facebook-circle-fill"></i
             ></a>
             <a href="https://www.instagram.com/louisciferbw" target="__blank"
@@ -874,7 +874,7 @@
         <div class="footer__socials">
           <h3 class="footer__contact--black">Social Links</h3>
           <div class="footer__social--icons">
-            <a href="https://www.facebook.com/" target="__blank"
+            <a href="https://www.facebook.com/LouisCiferBrewWorks" target="__blank"
             ><i class="ri-facebook-circle-fill"></i
           ></a>
           <a href="https://www.instagram.com/louisciferbw" target="__blank"
