--- a/events.html
+++ b/events.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Events</title>
+    <title>Events - Louis Cifer Brew Works</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="material/favicons.png" />
     <link rel="stylesheet" href="mainStyle.css" />
-    <link rel="stylesheet" href="style/eventSubStyle.css" />
+    <link rel="stylesheet" href="style/styleEvent.css" />
     <link rel="stylesheet" href="style/navbar.css" />
+
     
     <script defer src="script/scriptSecondary.js"></script>
-   
+
   </head>
   <body>
    
@@ -86,12 +87,12 @@
         <div class="nav__toggle--sub">
           <i class="ri-dashboard-fill"></i>
         </div>
+
   </header>
 <div class="section event">
   <div class="event__header">September Movies</div>
    <div class="event__container">
      <div class="film">
-       <img src="../material/resize/300.jpg" alt="">
         <div class="event__date">
           <h1>5</h1>
           <p>September</p>
@@ -102,7 +103,6 @@
       </div>
 
      <div class="film">
-       <img src="../material/resize/deadpool.jpg" alt="">
         <div class="event__date">
           <h1>12</h1>
           <p>September</p>
@@ -113,7 +113,6 @@
      </div>
 
      <div class="film">
-      <img src="../material/resize/joker.jpg" alt="">
         <div class="event__date">
           <h1>19</h1>
           <p>September</p>
@@ -124,7 +123,6 @@
       </div>
 
       <div class="film">
-        <img src="../material/resize/it.jpg" alt="">
         <div class="event__date">
           <h1>26</h1>
           <p>September</p>
