--- a/subscribe.html
+++ b/subscribe.html
@@ -10,77 +10,81 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="mainStyle.css" />
-    <link rel="stylesheet" href="style/eventSubStyle.css" />
+    <link rel="stylesheet" href="style/styleSubscribe.css" />
     <link rel="stylesheet" href="style/navbar.css" />
+
     <link rel="shortcut icon" href="material/favicons.png" />
 
     <script defer src="script/scriptSecondary.js"></script>
-   
   </head>
   <body>
     <header>
-        <nav class="navbar__container--sub" id="navbar-container">
-
-            <div class="nav__items--sub">
-              <a class="logohome--sub" href="#"
-                ><img src="material/resize/logolong170.png" alt=""
-              /></a>
-            </div>
-
-            <div class="navbar__links--sub">
-              <ul class="nav__list--sub">
-                <li class="nav__items--sub"><a class="logohome--nav" href="/index.html"
-                ><img src="material/resize/logolong300.png" alt=""
-                /></a></li>
-                <li class="nav__items--sub">
-                  <a href="/index.html" class="nav__link--sub"
-                    >Home</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/index.html#reservation" class="nav__link--sub"
-                    >Reservation</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/index.html#hour" class="nav__link--sub">Hours</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/index.html#menu" class="nav__link--sub">Menu</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/index.html#about" class="nav__link--sub">About</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/gallery.html" class="nav__link--sub">Gallery</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/delivery.html" class="nav__link--sub">Delivery</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/events.html" class="nav__link--sub ">Events</a>
-                </li>
-                <li class="nav__items--sub">
-                  <a href="/subscribe.html" class="nav__link--sub nav__link--active">Subscribe</a>
-                </li>
-                <i class="ri-close-fill nav--close"></i>
-                <div class="nav__socials--sub">
-                  <a href="https://www.facebook.com/LouisCiferBrewWorks" target="__blank"
-                      ><i class="icon ri-facebook-circle-fill"></i
-                  ></a>
-                  <a href="https://www.instagram.com/louisciferbw" target="__blank"
-                      ><i class=" icon ri-instagram-line"></i
-                  ></a>
-                </div>
-              </ul>
-            </div>
-        </nav>
-
-        <div class="nav__toggle--sub">
-          <i class="ri-dashboard-fill"></i>
+      <nav class="navbar__container--sub" id="navbar-container">
+        <div class="nav__items--sub">
+          <a class="logohome--sub" href="#"
+            ><img src="material/resize/logolong170.png" alt=""
+          /></a>
         </div>
 
-  </header>
+        <div class="navbar__links--sub">
+          <ul class="nav__list--sub">
+            <li class="nav__items--sub">
+              <a class="logohome--nav" href="/index.html"
+                ><img src="material/resize/logolong300.png" alt=""
+              /></a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/index.html" class="nav__link--sub">Home</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/index.html#reservation" class="nav__link--sub"
+                >Reservation</a
+              >
+            </li>
+            <li class="nav__items--sub">
+              <a href="/index.html#hour" class="nav__link--sub">Hours</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/index.html#menu" class="nav__link--sub">Menu</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/index.html#about" class="nav__link--sub">About</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/gallery.html" class="nav__link--sub">Gallery</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/delivery.html" class="nav__link--sub">Delivery</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/events.html" class="nav__link--sub">Events</a>
+            </li>
+            <li class="nav__items--sub">
+              <a href="/subscribe.html" class="nav__link--sub nav__link--active"
+                >Subscribe</a
+              >
+            </li>
+            <i class="ri-close-fill nav--close"></i>
+            <div class="nav__socials--sub">
+              <a
+                href="https://www.facebook.com/LouisCiferBrewWorks"
+                target="__blank"
+                ><i class="icon ri-facebook-circle-fill"></i
+              ></a>
+              <a href="https://www.instagram.com/louisciferbw" target="__blank"
+                ><i class="icon ri-instagram-line"></i
+              ></a>
+            </div>
+          </ul>
+        </div>
+      </nav>
 
-      <section class="section subscribe">
+      <div class="nav__toggle--sub">
+        <i class="ri-dashboard-fill"></i>
+      </div>
+    </header>
+    
+      <section class="section" id="subscribe_page">
         <div class="subscribe__container">
           <div class="subscribe__left">
             <img  src="material/resize/sublogo.png" alt="">
@@ -171,6 +175,5 @@
         </div>
       </div>
     </section>
-  
   </body>
 </html>
