--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
           <img src="material/resize/logolong300.png" alt="">
           <p class="promo__content">Be the first to receive exclusive promotions & discounts.<br> As well as the inside scoop on new beer releases!</p>
           
-          <a href="#sub" class="promo__btn subscribe__btn--link">Subscribe</a>
+          <a href="/subscribe.html" class="promo__btn subscribe__btn--link">Subscribe</a>
           <i class="ri-close-fill promo--close"></i>
         </div>
       </div>
