--- a/thankyou.html
+++ b/thankyou.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Subscribe - Louis Cifer Brew Works</title>
+    <title>Thanks you - Louis Cifer Brew Works</title>
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -85,32 +85,8 @@
     </header>
     
       <section class="section" id="subscribe_page">
-        <div class="subscribe__container">
-          <div class="subscribe__left">
-            <img  src="material/resize/sublogo.png" alt="">
-          </div>
-          <div class="subscribe__right">
-            <h1 class=" sub__header">JOIN THE MAILING LIST</h1>
-            <p class="sub__content">Be the first to receive exclusive promotions & discounts. </p>
-            <p class="sub__content">As well as the inside scoop on new beer releases!</p>
-            <form  action="https://formsubmit.co/alexanderovca@gmail.com" method="POST">
-                <div>
-                    <label for="name"></label>
-                    <input name="name" type="text" id="name" placeholder=" First Name" required>
-                </div>
-                <div>
-                  <label for="surname"></label>
-                    <input name="surname" type="text" id="surname" placeholder=" Last Name">
-                </div>
-                <div>
-                  <label for="email"></label>
-                    <input name="email" type="email" id="email" placeholder=" Email" required>
-                </div>
-                <input type="hidden" name="_autoresponse" value="Thank you! We recieved your email!">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5501/thankyou.html">
-                <button type="submit">Submit</button>
-            </form>
-          </div>
+        <div class="thanks">
+            <h1>THANK YOU! YOUR FORM SENT! STAY TUNED TO HEAR MORE FROM US! HAVE A NICE DAY</h1>
         </div>
       </section>
    
