--- a/subscribe.html
+++ b/subscribe.html
@@ -107,7 +107,7 @@
                     <input name="email" type="email" id="email" placeholder=" Email" required>
                 </div>
                 <input type="hidden" name="_autoresponse" value="Thank you! We recieved your email!">
-                <input type="hidden" name="_next" value="http://127.0.0.1:5501/thankyou.html">
+                <input type="hidden" name="_next" value="https://lc-beta.vercel.app/thankyou.html">
                 <button type="submit">Submit</button>
             </form>
           </div>
