--- a/thankyou.html
+++ b/thankyou.html
@@ -86,7 +86,10 @@
     
       <section class="section" id="subscribe_page">
         <div class="thanks">
-            <h1>THANK YOU! YOUR FORM SENT! STAY TUNED TO HEAR MORE FROM US! HAVE A NICE DAY</h1>
+          <img src="material/resize/logolong300.png" alt="">
+            <h2>Thank you!</h2></> 
+            <h3>Shortly, you will hear from us!</h3> 
+            <p>Have a nice day!</p>
         </div>
       </section>
    
