--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="mainStyle.css" />
     <link rel="stylesheet" href="style/styleGallery.css" />
     <link rel="stylesheet" href="style/navbar.css">
+    <link rel="stylesheet" href="style/footerStyle.css" />
     
     <script defer src="script/scriptSecondary.js"></script>
     <script defer src="script/scriptGallery.js"></script>
@@ -226,6 +227,7 @@
       <h3 class="footer__contact--black">Contact</h3> 
       <div class="footer__list">
         <p class="footer__items"><h4 class="footer__contact--black">Location:</h4>417 Danforth Ave, </br> Toronto, ON, Canada,</br>  M4K 1P1</p>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d303.3100570432064!2d-79.35136001200999!3d43.67754140944136!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89d4cc884b618405%3A0x2e6f236a8e724eb1!2sLouis%20Cifer%20Brew%20Works!5e0!3m2!1sen!2sru!4v1642668633958!5m2!1sen!2sru" width="300" height="250" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <p class="footer__items"><h4 class="footer__contact--black">Phone:</h4>+1 (647) 1234123</p>
         <p class="footer__items"><h4 class="footer__contact--black">Email:</h4>louiscifer@gmail.com</p>
       </div>
